test/fail/basic_syntax/wrong_arg_count_method_varargs.lily
#[
SyntaxError: Wrong number of arguments to Test.method (0 for 1+).
    from wrong_arg_count_method_varargs.lily:12:
]#

class Test
{
    define method(x: Integer, y: Integer...) {  }
}

var t = Test()
t.method()
